# Football-Balanced-Teams-Generator

./: .gitignore  README.md  app.py  data.xlsx  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
static/: app.js  style.css
templates/: index.html
