[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-balanced-teams-generator"
version = "1.0.0"
description = "A Flask application for generating balanced football teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==2.3.3",
    "gspread==5.12.0",
    "oauth2client==4.1.3",
    "pandas==2.2.0",
    "openpyxl==3.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools]
packages = ["."]
